[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/img.PNG" type="Texture" id=1]
[ext_resource path="res://src/themes/h1.tres" type="Theme" id=2]
[ext_resource path="res://src/themes/h2.tres" type="Theme" id=3]
[ext_resource path="res://scripts/owner.gd" type="Script" id=4]

[node name="Owner" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.188235, 0.690196, 0.909804, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
margin_right = 1012.0
margin_bottom = 1053.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 35
custom_constants/margin_top = 50
custom_constants/margin_left = 35
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
margin_left = 35.0
margin_top = 50.0
margin_right = 977.0
margin_bottom = 1003.0
custom_constants/separation = 21

[node name="TitleContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
margin_right = 942.0
margin_bottom = 60.0

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/TitleContainer"]
margin_right = 942.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/TitleContainer/CenterContainer"]
margin_left = 337.0
margin_right = 605.0
margin_bottom = 60.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )
text = "Собственник"

[node name="NameContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 942.0
margin_bottom = 143.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/NameContainer"]
margin_right = 942.0
margin_bottom = 62.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/NameContainer/VBoxContainer"]
margin_right = 942.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/NameContainer/VBoxContainer/CenterContainer"]
margin_left = 391.0
margin_right = 550.0
margin_bottom = 24.0
theme = ExtResource( 3 )
text = "ФИО собственника"

[node name="LineEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/NameContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 942.0
margin_bottom = 62.0
theme = ExtResource( 3 )
text = "fgfggffgfgfg"
align = 1

[node name="GarageContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 942.0
margin_bottom = 226.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/GarageContainer"]
margin_right = 942.0
margin_bottom = 62.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/GarageContainer/VBoxContainer"]
margin_right = 942.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/GarageContainer/VBoxContainer/CenterContainer"]
margin_left = 428.0
margin_right = 514.0
margin_bottom = 24.0
theme = ExtResource( 3 )
text = "№ Гаража"

[node name="LineEdit" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/GarageContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 942.0
margin_bottom = 62.0
theme = ExtResource( 3 )
text = "fgfggffgfgfg"
align = 1

[node name="PhotoContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 247.0
margin_right = 942.0
margin_bottom = 953.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/PhotoContainer"]
margin_right = 942.0
margin_bottom = 706.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/PhotoContainer/VBoxContainer"]
margin_right = 942.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/PhotoContainer/VBoxContainer/CenterContainer"]
margin_left = 408.0
margin_right = 533.0
margin_bottom = 24.0
theme = ExtResource( 3 )
text = "Фото счетчика"

[node name="CenterContainer2" type="CenterContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/PhotoContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 942.0
margin_bottom = 672.0

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/MarginContainer/VBoxContainer/PhotoContainer/VBoxContainer/CenterContainer2"]
margin_left = 141.0
margin_right = 801.0
margin_bottom = 644.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="CenterContainer3" type="CenterContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/PhotoContainer/VBoxContainer"]
margin_top = 676.0
margin_right = 942.0
margin_bottom = 706.0

[node name="LoadPhotoButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/PhotoContainer/VBoxContainer/CenterContainer3"]
margin_left = 396.0
margin_right = 546.0
margin_bottom = 30.0
rect_min_size = Vector2( 150, 30 )
theme = ExtResource( 3 )
text = "Загрузить"

[node name="ButtonExit" type="Button" parent="ScrollContainer/MarginContainer"]
margin_left = 35.0
margin_top = 50.0
margin_right = 87.0
margin_bottom = 70.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "<<<<<"
flat = true
icon_align = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 22.0
margin_bottom = 60.0
custom_constants/margin_right = 35
custom_constants/margin_top = 50
custom_constants/margin_left = 35
custom_constants/margin_bottom = 50

[node name="FileDialog" type="FileDialog" parent="MarginContainer"]
margin_left = 35.0
margin_top = 50.0
margin_right = 1011.0
margin_bottom = 610.0
rect_min_size = Vector2( 200, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
window_title = "Открыть файл"
resizable = true
dialog_text = "Загрузить фотографию"
dialog_autowrap = true
mode = 0
access = 2
show_hidden_files = true

[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/PhotoContainer/VBoxContainer/CenterContainer3/LoadPhotoButton" to="." method="_on_LoadPhotoButton_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
[connection signal="file_selected" from="MarginContainer/FileDialog" to="." method="_on_FileDialog_file_selected"]
